--- a/frontend/employee/sales.html
+++ b/frontend/employee/sales.html
@@ -704,7 +704,7 @@ ${productsList || 'Sin productos'}
 
         /* Efectos hover mejorados */
         .order-card:hover .order-header {
-            background: linear-gradient(135deg, #1d4ed8, #1e40af);
+            background: linear-gradient(135deg, #052e5b, #1e40af);
         }
 
         .order-card:hover .progress-bar {
