--- a/diagnostic.html
+++ b/diagnostic.html
@@ -20,7 +20,7 @@
             margin-bottom: 20px;
         }
         .debug-title {
-            color: #2563eb;
+            color: #052e5b;
             border-bottom: 2px solid #e5e7eb;
             padding-bottom: 10px;
             margin-bottom: 15px;
