--- a/frontend/admin/reports.html
+++ b/frontend/admin/reports.html
@@ -15,7 +15,7 @@
         }
 
         .report-header {
-            background: linear-gradient(135deg, #052e5b, #2563eb);
+            background: linear-gradient(135deg, #052e5b, #052e5b);
             color: white;
             padding: 2rem;
             border-radius: 12px;
@@ -76,7 +76,7 @@
         .control-group input:focus,
         .control-group select:focus {
             outline: none;
-            border-color: #2563eb;
+            border-color: #052e5b;
             box-shadow: 0 0 0 3px rgba(37, 99, 235, 0.1);
         }
 
@@ -102,13 +102,13 @@
         }
 
         .btn-primary {
-            background: linear-gradient(135deg, #2563eb, #3b82f6);
+            background: linear-gradient(135deg, #052e5b, #3b82f6);
             color: white;
             box-shadow: 0 4px 6px rgba(37, 99, 235, 0.3);
         }
 
         .btn-primary:hover {
-            background: linear-gradient(135deg, #1d4ed8, #2563eb);
+            background: linear-gradient(135deg, #052e5b, #052e5b);
             transform: translateY(-2px);
             box-shadow: 0 6px 12px rgba(37, 99, 235, 0.4);
         }
@@ -158,7 +158,7 @@
         }
 
         .modal-header {
-            background: linear-gradient(135deg, #052e5b, #2563eb);
+            background: linear-gradient(135deg, #052e5b, #052e5b);
             color: white;
             padding: 1.5rem 2rem;
             display: flex;
@@ -330,7 +330,7 @@
         }
 
         .total-card {
-            background: linear-gradient(135deg, #052e5b, #2563eb);
+            background: linear-gradient(135deg, #052e5b, #052e5b);
             color: white;
         }
 
