--- a/frontend/admin/subalmacenes.html
+++ b/frontend/admin/subalmacenes.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Subalmacenes Permanentes - Sistema de Aceites</title>
+    <title>Subalmacenes  - Sistema de Aceites</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/admin.css">
     <style>
-        /* Estilos específicos para subalmacenes permanentes */
+        /* Estilos específicos para subalmacenes  */
         .substore-container {
             background: white;
             border-radius: 8px;
@@ -119,7 +119,7 @@
         }
 
         .inventory-table th {
-            background: linear-gradient(135deg, #2563eb, #3b82f6);
+            background: linear-gradient(135deg, #052e5b, #3b82f6);
             color: white;
             padding: 1rem;
             text-align: left;
@@ -361,7 +361,7 @@
         }
 
         .info-banner strong {
-            color: #1d4ed8;
+            color: #052e5b;
         }
 
         @media (max-width: 768px) {
@@ -415,7 +415,7 @@
 
         <main class="main-content">
             <header class="content-header">
-                <h1> Gestión de Subalmacenes Permanentes</h1>
+                <h1> Gestión de Subalmacenes</h1>
                 <div class="header-actions">
                     <button class="btn btn-primary" onclick="openNewTripModal()">
                          Nuevo Subalmacén
@@ -439,7 +439,7 @@
                             </select>
                         </div>
                         <div style="color: var(--secondary-color); font-size: 0.875rem;">
-                             Solo se muestran subalmacenes activos (permanentes)
+                             Solo se muestran subalmacenes activos
                         </div>
                     </div>
                 </div>
