--- a/frontend/admin/employees.html
+++ b/frontend/admin/employees.html
@@ -52,7 +52,7 @@
         </main>
     </div>
 
-    <!-- Modal para agregar empleado -->
+    <!-- Modal para agregar vendedor -->
     <div id="employee-modal" class="modal">
         <div class="modal-content">
             <div class="modal-header">
@@ -72,7 +72,7 @@
                     <div class="form-group">
                         <label for="employee-role">Rol:</label>
                         <select id="employee-role" required>
-                            <option value="employee">Empleado</option>
+                            <option value="employee">vendedor</option>
                             <option value="admin">Administrador</option>
                         </select>
                     </div>
