--- a/frontend/admin/orders.html
+++ b/frontend/admin/orders.html
@@ -32,7 +32,7 @@
                     <div class="search-container">
                         <input type="text" 
                             id="client-search" 
-                            placeholder="🔍 Buscar por cliente, pedido o empleado..."
+                            placeholder="🔍 Buscar por cliente, pedido o vendedor..."
                             class="search-input">
                     </div>
                     
