--- a/frontend/admin/subalmacenes.html
+++ b/frontend/admin/subalmacenes.html
@@ -432,9 +432,9 @@
                 <div style="padding: 1rem; border-bottom: 1px solid var(--border-color);">
                     <div style="display: flex; gap: 1rem; align-items: center; flex-wrap: wrap;">
                         <div>
-                            <label for="employee-filter" style="margin-right: 0.5rem;"> Empleado:</label>
+                            <label for="employee-filter" style="margin-right: 0.5rem;"> vendedor:</label>
                             <select id="employee-filter" onchange="filterTrips()">
-                                <option value="">Todos los empleados</option>
+                                <option value="">Todos los vendedors</option>
                                 <!-- Se llena dinámicamente -->
                             </select>
                         </div>
