--- a/frontend/employee/dashboard.html
+++ b/frontend/employee/dashboard.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Panel Empleado - Sistema de Aceites</title>
+    <title>Panel vendedor - Sistema de Aceites</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/employee.css">
 </head>
@@ -11,7 +11,7 @@
     <div class="employee-container">
         <nav class="sidebar">
             <div class="sidebar-header">
-                <h2>Panel Empleado</h2>
+                <h2>Panel vendedor</h2>
                 <span id="user-name"></span>
             </div>
             <ul class="nav-menu">
