--- a/frontend/admin/dashboard.html
+++ b/frontend/admin/dashboard.html
@@ -44,7 +44,7 @@
                     <span id="monthly-sales" class="stat-number">$0</span>
                 </div>
                 <div class="stat-card">
-                    <h3>Empleados Activos</h3>
+                    <h3>vendedors Activos</h3>
                     <span id="active-employees" class="stat-number">0</span>
                 </div>
             </div>
@@ -56,7 +56,7 @@
                         <thead>
                             <tr>
                                 <th>Número</th>
-                                <th>Empleado</th>
+                                <th>vendedor</th>
                                 <th>Total</th>
                                 <th>Estado</th>
                                 <th>Fecha</th>
