--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,7 +12,7 @@
             <h1>Sistema de Aceites</h1>
             <form id="loginForm">
                 <div class="form-group">
-                    <label for="employee_code">Código de Empleado:</label>
+                    <label for="employee_code">Código de vendedor:</label>
                     <input type="text" id="employee_code" name="employee_code" required>
                 </div>
                 <div class="form-group">
