Correccion de paleta de colores

--- a/frontend/employee/dashboard.html
+++ b/frontend/employee/dashboard.html
@@ -6,6 +6,7 @@
     <title>Panel vendedor - Sistema de Aceites</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/employee.css">
+    <script src="../js/employee.js"></script>
 </head>
 <body>
     <div class="employee-container">
