--- a/frontend/admin/orders.html
+++ b/frontend/admin/orders.html
@@ -48,7 +48,7 @@
                     <button class="btn btn-secondary" onclick="clearOrderFilters()" title="Limpiar filtros">
                         Limpiar
                     </button>
-                    <button class="btn btn-primary" onclick="loadOrdersPage()" title="Actualizar lista">
+                    <button class="btn btn-primary" style="background-color: #052e5b;" onclick="loadOrdersPage()" title="Actualizar lista">
                         Actualizar
                     </button>
                 </div>
@@ -58,7 +58,7 @@
                 <table id="orders-table">
                     <thead>
                         <tr>
-                            <th>Número</th>
+                            <th>Folio</th>
                             <th>Vendedor</th>
                             <th>Cliente</th>
                             <th>Total</th>
