--- a/frontend/admin/products.html
+++ b/frontend/admin/products.html
@@ -410,7 +410,7 @@
                 <button type="button" class="btn btn-secondary" onclick="closeProductModal()">
                     Cancelar
                 </button>
-                <button type="submit" class="btn btn-primary" form="product-form">
+                <button type="submit" class="btn btn-primary" style="background-color: #052e5b;" form="product-form">
                     Guardar
                 </button>
             </div>
