--- a/frontend/admin/employees.html
+++ b/frontend/admin/employees.html
@@ -93,7 +93,7 @@
                     <button type="button" class="btn btn-secondary" onclick="closeEmployeeModal()">
                         Cancelar
                     </button>
-                    <button type="submit" class="btn btn-primary" >
+                    <button type="submit" class="btn btn-primary" style="background-color: #052e5b;">
                         Crear vendedor
                     </button>
                 </div>
