--- a/frontend/admin/orders.html
+++ b/frontend/admin/orders.html
@@ -20,6 +20,7 @@
                 <li><a href="employees.html">Vendedores</a></li>
                 <li><a href="orders.html" class="active">Pedidos</a></li>
                 <li><a href="subalmacenes.html">Subalmacenes</a></li>
+                <li><a href="clients.html">Clientes</a></li>
                 <li><a href="reports.html">Reportes</a></li>
                 <li><a href="#" onclick="logout()">Cerrar Sesión</a></li>
             </ul>
