--- a/frontend/admin/products.html
+++ b/frontend/admin/products.html
@@ -240,6 +240,7 @@
                 <li><a href="employees.html">Vendedores</a></li>
                 <li><a href="orders.html">Pedidos</a></li>
                 <li><a href="subalmacenes.html">Subalmacenes</a></li>
+                <li><a href="clients.html">Clientes</a></li>
                 <li><a href="reports.html">Reportes</a></li>
                 <li><a href="#" onclick="logout()">Cerrar Sesión</a></li>
             </ul>
