--- a/frontend/admin/products.html
+++ b/frontend/admin/products.html
@@ -331,23 +331,15 @@
                 <!-- Sistema de Precios Múltiples -->
                 <div class="pricing-section">
                     <h3 style="color: var(--primary-color); margin-bottom: 1rem; display: flex; align-items: center; gap: 0.5rem;">
-                        <span>💰</span>
+                        <span></span>
                         Sistema de Precios Múltiples
                     </h3>
-                    
-                    <div class="pricing-help">
-                        <h4>
-                            <span>💡</span>
-                            Información Importante
-                        </h4>
-                        <p>El <strong>Precio Contado - Caja</strong> será el precio principal mostrado en la lista de productos. Los demás precios se almacenan para uso en facturación y diferentes modalidades de venta.</p>
-                    </div>
                     
                     <div class="pricing-grid">
                         <!-- Contado Pieza -->
                         <div class="price-card">
                             <div class="price-header">
-                                <span>💵</span>
+                                <span></span>
                                 <span>Contado - Pieza</span>
                                 <span class="price-badge">UNIDAD</span>
                             </div>
@@ -360,14 +352,14 @@
                         </div>
 
                         <!-- Contado Caja (PRECIO MOSTRADO) -->
-                        <div class="price-card display-price">
+                        <div class="price-card">
                             <div class="price-header">
-                                <span>📦</span>
+                                <span></span>
                                 <span>Contado - Caja</span>
-                                <span class="price-badge display-badge">PRINCIPAL</span>
+                                <span class="price-badge">CAJA</span>
                             </div>
                             <div class="form-group">
-                                <label for="price-cash-box">Precio por Caja *</label>
+                                <label for="price-cash-unit">Precio por Caja *</label>
                                 <div class="price-input">
                                     <input type="number" id="price-cash-box" step="0.01" min="0" required placeholder="0.00">
                                 </div>
@@ -377,7 +369,7 @@
                         <!-- Crédito 21 días Pieza -->
                         <div class="price-card">
                             <div class="price-header">
-                                <span>📅</span>
+                                <span></span>
                                 <span>Crédito 21d - Pieza</span>
                                 <span class="price-badge">CRÉDITO</span>
                             </div>
@@ -392,7 +384,7 @@
                         <!-- Crédito 21 días Caja -->
                         <div class="price-card">
                             <div class="price-header">
-                                <span>📦📅</span>
+                                <span></span>
                                 <span>Crédito 21d - Caja</span>
                                 <span class="price-badge">CRÉDITO</span>
                             </div>
