--- a/frontend/admin/clients.html
+++ b/frontend/admin/clients.html
@@ -31,7 +31,7 @@
                 </header>
                 <br>
                 <div>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/ChKqrwa7Ylw?si=jSkr-MWrs1faqhh7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin"></iframe>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/ChKqrwa7Ylw?si=jSkr-MWrs1faqhh7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
             </main>
 
